@@ -1,3 +1,9 @@
+2011-08-22  Alan Modra  <amodra@gmail.com>
+
+	* ld-powerpc/tocopt4a.s, * ld-powerpc/tocopt4b.s,
+	* ld-powerpc/tocopt4.d: New test.
+	* ld-powerpc/powerpc.exp: Run it.
+
 2011-08-12  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR ld/13082
